
              pamscale: fix PBM input + -nomix.

              anytopnm: fix parsing of type description.

              pamtilt: fix crash with excessive angle.

              pbmtext: remove meaningless "no output" from error messages.

              pbm_loadbdffont(): handle zero size glyph.  Affects pbmtext.

              pbmtext: fail properly if input contains no text.

              pnmnorm: fix -colorvalue, -saturation, -keephues options.

              pnmnorm: fix resolution of conflicting -wpercent and -wvalue.

              pamtohtmltbl: fix output error: contains holes due to
              uninitialized memory.

              xvminitoppm: fix.  Totally broken since 10.34.

              pbmtogo: fix buffer overrun with too wide image.

              tgatoppm: fix standard input invocation.

              pamtotga: fix free of unallocated memory with no -name option.

              pamtouil: fix double free of memory.

              ppmd_filledrectangle: fail properly on negative image
              height, width.

              Add back ppmd_fill_init() for backward compatibility;
              removed in 10.29.

              Build: make it work with Gcc 4.3 and -sse.

08.03.26 BJH  Release 10.42.00

              anytopnm: Recognize xwd image by 'file' type.

              pamflip: Rewrite low-memory algorithm; use temp files and
              conserve virtual as well as real memory.

              tifftopnm: orient raster properly in row-by-row operation
              when TIFF uses nonstandard raster orientation.  (ORIENTATION
              tag).

              pbmtext: fail cleanly if -width, -space, or -lspace is
              too large for computation.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pbmtext: fix negative -space.

              pbmtext: fail cleanly if input line is > 5000 characters.

              pamundice: Fix bogus error about missing "-instem" option.
